--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dist/index.js"
-  },
+  "start": "node dist/index.js",
+  "dev": "nodemon dist/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
